# 2526-app5-programmationgpu

./: .clangd  .gitignore  CMakeLists.txt  README.md
exemples/: multiply-array-cuda-2.cu  multiply-array-cuda-3.cu
tp/tp1/: convolution.cu  cuda-copy-dynamic.cu  cuda-copy-kernel.cu  cuda-copy-static.cu  hello.cu  saxpy.cu
tp/tp1_kokkos/: convolution.cpp  copy-dynamic.cpp  copy-kernel.cpp  copy-static.cpp  hello.cpp  saxpy.cpp
